--- a/app/src/main/res/drawable/item_circular_color_accent_border.xml
+++ b/app/src/main/res/drawable/item_circular_color_accent_border.xml
@@ -6,5 +6,5 @@
         android:width="5dp"
         android:color="@color/colorAccent" />
 
-    <solid android:color="#FFFFFF" />
+    <solid android:color="@color/white" />
 </shape>
